@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-10-06T00:54:13Z",
-  "count_outdated" : 265,
-  "uniques_outdated" : 198,
+  "timestamp" : "2025-10-07T00:53:13Z",
+  "count_outdated" : 266,
+  "uniques_outdated" : 199,
   "count" : 267,
   "uniques" : 200,
   "clones" : [
-    {
-      "timestamp": "2025-09-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-09-26T00:00:00Z",
       "count": 1,
